# emsgine

./: .gitignore  Cargo.toml  readme.md
docs/instruction-sets/: avr.opcode.nfo  patten-file.grammer
emsgine-app/: Cargo.toml
emsgine-app/src/: main.rs
emsgine-core/: Cargo.toml
emsgine-core/src/: errors.rs  lib.rs  memory.rs
emsgine-core/src/actions/: instruction.rs  mod.rs  registers.rs
emsgine-core/src/actions/cpu/: registers.rs
emsgine-core/src/ast/: mod.rs
emsgine-core/src/ast/cpu/: instruction.rs  mod.rs  registers.rs  symbols.rs
emsgine-core/src/ast/provider/: mod.rs
emsgine-core/src/contexts/: cpu.rs  decoder.rs  loader.rs  memory.rs  mod.rs
emsgine-core/src/namespaces/avr/: action.rs  ast.rs  (+4 more)
emsgine-lib/: Cargo.toml
emsgine-lib/src/: actions.rs  ast.rs  bitwise.rs  lib.rs  lookup.rs  primitive.rs
emsgine-lib/src/ast/: mod.rs  op_binary.rs  op_unary.rs  primitives.rs  statements.rs
emsgine-lib/src/contexts/: locals.rs  mod.rs  parameters.rs
emsgine-lib/src/models/: bytes.rs  instructionset.rs  mod.rs  portable.rs
emsgine-plugin/: Cargo.toml
emsgine-wplugin/: Cargo.toml
instructnest/: pyproject.toml
instructnest/src/instructnest/: cli.py  codegen.py  common.py  decored_minifier.py  instpatern.py  instruction.py  partition.py  rustgen.py  utils.py
instructnest/src/instructnest/templates/rust/disassembly/: closure_wordsize.rs.jinja  decoder_function.rs.jinja  decoder_match.jinja  decoder_terminal.jinja  enum_declaration.jinja  extract_function.jinja  impl_format_inst.rs.jinja  impl_mnemonic.rs.jinja  value_extactor_macro.jinja
